[project]
name = "benefits-plan-qa"
version = "0.1.0"
description = "Ask plain-English questions of any benefits plan PDF — answers grounded in the document with page citations. Built with the Claude API."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Bennett Castillo" }]
dependencies = [
    "anthropic>=0.40.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
rag = [
    "sentence-transformers>=2.7.0",
    "faiss-cpu>=1.8.0",
    "numpy>=1.26.0",
]
ui = [
    "streamlit>=1.30.0",
]

[project.scripts]
benefits-plan-qa = "main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "qa"]
